TimePicker border bug on iphone was fixed.

--- a/default.css
+++ b/default.css
@@ -19,7 +19,7 @@ html, body {
 
 .mh2 {
     text-align: center;
-    margin-top: 25px;
+    margin-top: 35px;
     margin-right: 3px;
     font-size: 24px;
     font-weight: bold;
@@ -94,6 +94,7 @@ html, body {
 
 #time {
     width: 192px;
+    height: 50px;
     margin-left: auto;
     margin-right: auto;
     cursor: pointer;
@@ -556,7 +557,7 @@ html {
   @media screen and (max-width: 550px) {
 
     .mh2 {
-        font-size: 18px;
+        font-size: 21px;
     }
 
     .main-container {
